# tekel

./: .gitignore  README.md  package.json  pyproject.toml
.claude/: settings.local.json
docs/: ci-cd.md  cli.md  getting-started.md  schema.md  views.md
src/tekel/: cli.py  collection.py  config.py  document.py  formatter.py  hooks.py  migrate.py  schema.py  views.py
src/tekel/schemas/: pm.json
src/tekeldb/: cli.py  config.py  deps.py  document.py  formatter.py  hooks.py  idgen.py  query.py  schema.py
src/tekeldb/schemas/: pm.yaml
tests/: conftest.py  test_cli.py  test_deps.py  test_hooks.py  test_migrate.py  test_query.py  test_schema.py  test_schema_mgmt.py  test_validate_formats.py  test_views.py
