[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tekel"
version = "0.3.0"
description = "Schema validation and query engine for flat-file JSON data"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.scripts]
tekel = "tekel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
